--- a/index.html
+++ b/index.html
@@ -321,6 +321,32 @@
      🔗 Join the Discord
   </a>
 </div>
+<!-- Bongo SMS -->
+<div class="project-card" style="animation-delay: 0.5s;">
+  <h3>📱 Bongo SMS</h3>
+  <p>Bongo SMS is a lightweight, offline-friendly, peer-to-peer messaging web app designed to run on a local Raspberry Pi network. Perfect for LAN-only group chats without any internet connection.</p>
+  <ul style="color:#ccc; font-size:0.9rem; padding-left: 1.2rem; margin-top: 8px;">
+    <li>🗨️ Real-time group messaging with persistent JSON storage</li>
+    <li>📡 Fully offline, runs on Raspberry Pi Wi-Fi AP</li>
+    <li>📱 Responsive UI using Tailwind CSS</li>
+    <li>🔒 No internet required; LAN only</li>
+  </ul>
+  <a href="https://github.com/TechnoVision/Bongo-SMS" target="_blank" rel="noopener noreferrer" class="link">View on GitHub</a>
+</div>
+
+<!-- NEO98 -->
+<div class="project-card" style="animation-delay: 0.6s;">
+  <h3>💻 NEO98</h3>
+  <p>NEO98 is a minimal OS kernel project with VGA text mode GUI and PS/2 mouse support, written in C and assembly for 32-bit x86. Runs on real hardware or QEMU emulator.</p>
+  <ul style="color:#ccc; font-size:0.9rem; padding-left: 1.2rem; margin-top: 8px;">
+    <li>🖥️ VGA text-mode GUI with taskbar and clock</li>
+    <li>🖱️ PS/2 mouse support with cursor</li>
+    <li>🔧 Multiboot-compliant, double-buffered graphics</li>
+    <li>⚙️ Minimal libc, assembly & Makefile for building</li>
+  </ul>
+  <a href="https://github.com/TechnoVision/NEO98" target="_blank" rel="noopener noreferrer" class="link">View on GitHub</a>
+</div>
+
 
       <div class="project-card">
         <h3>Phishing Authority API</h3>
