--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 </div>
 <!-- Bongo SMS -->
 <div class="project-card" style="animation-delay: 0.5s;">
-  <h3>📱 Bongo SMS</h3>
+  <h3>Bongo SMS</h3>
   <p>Bongo SMS is a lightweight, offline-friendly, peer-to-peer messaging web app designed to run on a local Raspberry Pi network. Perfect for LAN-only group chats without any internet connection.</p>
   <ul style="color:#ccc; font-size:0.9rem; padding-left: 1.2rem; margin-top: 8px;">
     <li>🗨️ Real-time group messaging with persistent JSON storage</li>
@@ -336,7 +336,7 @@
 
 <!-- NEO98 -->
 <div class="project-card" style="animation-delay: 0.6s;">
-  <h3>💻 NEO98</h3>
+  <h3>NEO98</h3>
   <p>NEO98 is a minimal OS kernel project with VGA text mode GUI and PS/2 mouse support, written in C and assembly for 32-bit x86. Runs on real hardware or QEMU emulator.</p>
   <ul style="color:#ccc; font-size:0.9rem; padding-left: 1.2rem; margin-top: 8px;">
     <li>🖥️ VGA text-mode GUI with taskbar and clock</li>
@@ -393,9 +393,11 @@
     <p>Some of my key projects include:</p>
 
     <ul style="list-style-type: '🧠 '; padding-left: 1.5rem;">
-      <li><strong>Phishing Authority API</strong> — anti-scam infrastructure</li>
       <li><strong>Ender Empire</strong> — Minecraft network</li>
       <li><strong>Northbridge Roleplay</strong> — 🇬🇧 UK-based FiveM server</li>
+      <li><strong>Bongo SMS</strong> — offline peer-to-peer messaging app on Raspberry Pi</li>
+      <li><strong>NEO98</strong> — minimal OS kernel with VGA text-mode GUI and PS/2 mouse support</li>
+      <li><strong>Phishing Authority API</strong> — anti-scam infrastructure</li>
       <li><strong>PicStream.gg</strong> — image-sharing platform</li>
       <li><strong>Custom OpenDNS</strong> — DNS routing & threat detection</li>
       <li><strong>FiveM / QB-Core Scripts</strong> — custom in-game systems</li>
