--- a/index.html
+++ b/index.html
@@ -240,51 +240,6 @@
   <div class="container" id="projects">
     <h2 class="section-title">Projects</h2>
     <div class="projects">
-      <!-- NORTHBRIDGE ROLEPLAY -->
-<div class="project-card" style="border: 2px solid #f6ad55; background-color: #1a202c; padding: 2rem; border-radius: 12px; display: flex; flex-direction: column; align-items: center; text-align: center;">
-  
-  <h3 class="section-title" style="color: #f6ad55; font-size: 1.75rem; margin-bottom: 1rem;">🚨 Featured: Northbridge Roleplay</h3>
-  
-  <img src="https://cdn.discordapp.com/icons/1343354364299051138/d536a02cce157e121aaccbcaaff36dd2.webp" 
-       alt="Northbridge Roleplay Icon" 
-       style="width: 100px; height: 100px; border-radius: 20%; margin-bottom: 15px; border: 3px solid #f6ad55;" />
-
-  <h3 style="color: #f6ad55; font-size: 1.6rem; margin-bottom: 10px;">🚨 Northbridge Roleplay (2025–Present)</h3>
-
-  <p style="color: #fbd38d;">Explore a detailed world with over <strong>40+ custom interiors</strong>: PDs, clubs, mechanic shops, luxury homes & more.</p>
-  
-  <p style="color: #fbd38d;">Enjoy <strong>unique jobs</strong>, immersive RP, and <strong>optimized performance</strong> in a feature-rich FiveM experience.</p>
-  
-  <p style="color: #fbd38d;">
-    Cfx.re Server List:  
-    <a href="https://servers.fivem.net/servers/detail/dqrdbd" 
-       target="_blank" 
-       rel="noopener noreferrer" 
-       style="color: #f6ad55; word-break: break-word; text-decoration: underline;">
-      https://servers.fivem.net/servers/detail/dqrdbd
-    </a>
-  </p>
-
-  <!-- Styled Discord Button -->
-  <a href="https://discord.gg/wf4s7kwZuN" 
-     target="_blank" 
-     rel="noopener noreferrer" 
-     style="
-        margin-top: 20px;
-        padding: 10px 20px;
-        background-color: #f6ad55;
-        color: #1a202c;
-        font-weight: bold;
-        border-radius: 8px;
-        text-decoration: none;
-        transition: background-color 0.3s ease;
-     "
-     onmouseover="this.style.backgroundColor='#dd6b20'"
-     onmouseout="this.style.backgroundColor='#f6ad55'">
-     🔗 Join the Discord
-  </a>
-</div>
-
 <!-- ENDER EMPIRE -->
 <div class="project-card" style="border: 2px solid #4299e1; background-color: #1a202c; padding: 2rem; border-radius: 12px; display: flex; flex-direction: column; align-items: center; text-align: center;">
 
@@ -345,6 +300,46 @@
     <li>⚙️ Minimal libc, assembly & Makefile for building</li>
   </ul>
   <a href="https://github.com/TechnoVision/NEO98" target="_blank" rel="noopener noreferrer" class="link">View on GitHub</a>
+</div>
+<!-- NORTHBRIDGE ROLEPLAY -->
+<div class="project-card" style="border: 2px solid #f6ad55; background-color: #1a202c; padding: 2rem; border-radius: 12px; display: flex; flex-direction: column; align-items: center; text-align: center;">
+  
+  <h3 class="section-title" style="color: #f6ad55; font-size: 1.75rem; margin-bottom: 1rem;">🚨 Featured: Northbridge Roleplay</h3>
+  
+  <img src="https://cdn.discordapp.com/icons/1343354364299051138/d536a02cce157e121aaccbcaaff36dd2.webp" 
+       alt="Northbridge Roleplay Icon" 
+       style="width: 100px; height: 100px; border-radius: 20%; margin-bottom: 15px; border: 3px solid #f6ad55;" />
+
+  <h3 style="color: #f6ad55; font-size: 1.6rem; margin-bottom: 10px;">🚨 Northbridge Roleplay (14/06/25 – 29/07/25)</h3>
+
+  <p style="color: #fbd38d;">Explore a detailed world with over <strong>40+ custom interiors</strong>: PDs, clubs, mechanic shops, luxury homes & more.</p>
+  
+  <p style="color: #fbd38d;">Enjoy <strong>unique jobs</strong>, immersive RP, and <strong>optimized performance</strong> in a feature-rich FiveM experience during its run.</p>
+  
+  <p style="color: #fbd38d;">
+    Cfx.re Server Archive:  
+    <a href="https://servers.fivem.net/servers/detail/dqrdbd" 
+       target="_blank" 
+       rel="noopener noreferrer" 
+       style="color: #f6ad55; word-break: break-word; text-decoration: underline;">
+      https://servers.fivem.net/servers/detail/dqrdbd
+    </a>
+  </p>
+
+  <!-- Styled Discord Button disabled since server is shut down -->
+  <button disabled
+     style="
+        margin-top: 20px;
+        padding: 10px 20px;
+        background-color: #a0aec0;
+        color: #2d3748;
+        font-weight: bold;
+        border-radius: 8px;
+        border: none;
+        cursor: not-allowed;
+     ">
+     🔗 Discord Closed
+  </button>
 </div>
 
 
