--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
   <!-- Contact -->
   <div style="margin-top: 2.5rem;">
     <h2 class="section-title" style="font-size: 1.75rem; color: #38bdf8;">📬 Get in Touch</h2>
-    <p>Join my Discord server: <a href="https://discord.gg/urd5mxBXcW" target="_blank" rel="noopener noreferrer" style="color: #38bdf8; text-decoration: underline;">discord.gg/urd5mxBXcW</a></p>
+    <p>Join my Discord server: <a href="https://discord.gg/QMjWCPGM" target="_blank" rel="noopener noreferrer" style="color: #38bdf8; text-decoration: underline;">discord.gg/urd5mxBXcW</a></p>
   </div>
 </div>
 
